src/objects/GVS_Settings__c.object
<CustomObject>
    <fields>
        <fullName>GetStartNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Start Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetStopNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Stop Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastStartStep1__c</fullName>
        <label>Last Start Step 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStartStep2__c</fullName>
        <label>Last Start Step 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStartStep3__c</fullName>
        <label>Last Start Step 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStopStep1__c</fullName>
        <label>Last Stop Step 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStopStep2__c</fullName>
        <label>Last Stop Step 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStopStep3__c</fullName>
        <label>Last Stop Step 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotifyErrorsTo__c</fullName>
        <label>Notify Errors To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StartSynchronization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Synchronization</label>
        <type>Checkbox</type>
    </fields>
    <label>GVS - Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PicklistSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GVS - Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>